# Blockchain-Sawtooth

./: .gitignore  HLSawtoothSamples.sln  PRTest  README.md  TallyWorld.sln  TestDocument.docx  a.txt  aaaa.txt  abcd.tx  abcd.txt  addedfile.txt  anotherFile.txt  azure-pipelines.yml  b.txt  cccc  conflictTest.txt  demo.txt  history_renamed.txt  history_renamed_again.txt  new.txt  new30.txt  newAtMaster.txt  new_files.txt  new_test.txt  newfile.txt  test  test.txt  test1.txt  test_new_file.txt  x002.txt  xxxx
ASPNetExperiment/RazorPagesMovie/: RazorPagesMovie.csproj  RazorPagesMovie.sln  appsettings.json
ASPNetExperiment/RazorPagesMovie/Migrations/: 20200503115411_InitialCreate.Designer.cs  RazorPagesMovieContextModelSnapshot.cs
ASPNetExperiment/RazorPagesMovie/Models/: Movie.cs  Sum.cs
Blockchain/HyperledgerSawtooth/Sawtooth.Sdk.Net.Test/: TxnFamiliesTest.cs
CMakeParentFolder/HelloWorld/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  hello.cpp
CMakeProjects/Project1/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  HelloApi1.cpp  main.cpp
CMakeProjects/Project1/Includes/: HelloApi1.hpp
CMakeProjects/Project2/: CMakeLists.txt  CMakeSettings.json  HelloApi2.cpp
CMakeProjects/Project2/Includes/: HelloApi2.hpp
CSharpIneroperability/: CSharpIneroperability.sln
CSharpIneroperability/CSInteroperabilityConsole/: EncodingMarshaler.cs  Ensure.cs  GlobalSettings.cs  LambdaEqualityHelper.cs  Platform.cs  Program.cs  TWError.cs  TWErrorCategory.cs  TWErrorCode.cs  TWNativeMethods.cs  TWNativeSymbols.cs  TallyWorldException.cs  Utf8Marshaler.cs
CSharpIneroperability/CSharpIneroperability/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
CSharpTests/CsharpTest/: Program.cs
CoreProcessSample/: CMakeLists.txt  CMakeSettings.json  Source.cpp  coreprocesssample.twappid
HelloWorld/: CMakeLists.txt  CMakeSettings.json  HelloWorld.cpp
HelloWorldConsole/HelloWorld/: HelloWorld.sln
LargeFiles/: IMG_3461.MOV
ParallelTest/PrallellJobs/: PrallellJobs.sln
PrivateGalleryCreator-master/src/: FeedWriter.cs
Samples/IntKey/: App.xaml
Samples/IntegerKey/: MainWindow.xaml.cs
Samples/LicenseAdminApp/: App.xaml  MainWindow.xaml.cs
Samples/LicenseTransactionProcessor/: Log4Net.config
Samples/LicenseUserApp/: App.xaml  App.xaml.cs  AssignLicense.xaml  LicenseUserApp.csproj
Samples/SawtoothBrowser/: App.xaml  App.xaml.cs  MainWindow.xaml.cs  SawtoothBrowser.csproj
Samples/Smallbank/: Program.cs  appsettings.json
Samples/Smallbank/Models/: Account.cs  (+1 more)
Samples/TicTacToe/: App.xaml
Sawtooth.Sdk.Net/: Sawtooth.Sdk.Net.csproj
Sawtooth.Sdk.Net.Test/: Sawtooth.Sdk.Net.Test.csproj  TxnFamiliesTest.cs
Sawtooth.Sdk.Net/Client/: Encoder.cs  EncoderSettings.cs  ISigner.cs  Signer.cs  ValidatorClient.cs
Sawtooth.Sdk.Net/Messaging/: IStreamListener.cs  Stream.cs  ZMQResponse.cs
Sawtooth.Sdk.Net/Transactions/: CBORPayload.cs  CSVStringPayload.cs  IState.cs
Sawtooth.Sdk.Net/Utils/: InternalErrorException.cs  Logger.cs
Solution/: TWCore.Test  TWCore.Test.sln
Solution/TallyWorld/: TallyWorld.sln
TallyWorld/: TallyWorld.sln
TallyWorld.WatchOS/: TallyWorld.WatchOS.sln
TallyWorld/TWTest.WPF.Windows/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TWTest.WPF.Windows.csproj
TallyWorldMac/: TallyWorldMac.sln
TallyWorldWatchOS/: TallyWorldWatchOS.sln
TestRelease/ConsoleApplication1/: ConsoleApplication1.sln
TestRepo/TestConsoleApp/: TestConsoleApp.sln
UWPExperiment/UWPApp/: App.xaml  App.xaml.cs  EchoInputPage.cs  EchoInputPage.xaml  EchoResponsePage.cs  EchoResponsePage.xaml  Package.appxmanifest  UWPApp.csproj
WPFExperiment/ExpenseIt/: ExpenseIt.csproj  ExpenseIt.sln  ExpenseItHome.xaml  ExpenseItHome.xaml.cs  ExpenseReportPage.xaml  MainWindow.xaml
WPFExperiment/ExpenseIt_NetCore/: ExpenseItHome.xaml  ExpenseReportPage.xaml  ExpenseReportPage.xaml.cs
WPFExperiment/ExpenseIt_NetCore_CSOnly/: AppMain.cs  ExpenseItHome.cs  ExpenseReportPage.cs  MainWindow.cs
(+220 files in other folders)
